--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -723,6 +723,8 @@ CONFIG_FUNCTION_ERROR_INJECTION=y
 # CONFIG_RUNTIME_TESTING_MENU is not set
 CONFIG_FRAME_WARN=0
 CONFIG_SUSPEND_SKIP_SYNC=y
+CONFIG_ZRAM=m
+CONFIG_ZSMALLOC=m
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_BBR=y
 # CONFIG_DEFAULT_CUBIC is not set
